fix:restaurant API,db修正
